--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         Hiya, you can call me Fade! I like to draw and I'm tired :) I create character-focused digital artwork, ranging from illustrations, to animations, designs, pixelart, and 3D modeling. I also dabble in crafting/costume-making from time to time but it's more of a hobby at this stage. My love for nature, creativity, self-expression, and my various animal friends inspire me to create and do what I do.
       </p>
       <p class="bodyText centerText" style="font-size: 14pt;">
-        If you're looking to get in touch, I am currently I am most active on Bluesky and Discord, or you can check out any of my links below. If you're interested in my Discord or Telegram, please ask me for my username!
+        If you're looking to get in touch, I am currently most active on Bluesky and Discord, or you can check out any of my links below. If you're interested in my Discord or Telegram, please ask me for my username!
       </p>
       <p class="centerText" style="color: var(--orange); font-weight: bold; font-size: 14pt;">
         Thank you so much for visiting! <span style="color: var(--text_red);"><3</span>
