Fixed typo in 2.1b

--- a/tos.html
+++ b/tos.html
@@ -78,7 +78,7 @@
         The blocking stage is my alternative to a sketching stage. It is defined as a lineless "color blob" pass of your character(s). Colored shapes are used to define the body instead of linework, so the colors will not be accurate to your character(s) at this stage. Things may look odd right now, but trust the process!
       </p>
       <p class="subbullet bodyText">
-        The lining stage is defined as a refined lined pass of your character(s). The lines may remaim sketchy and expressive at parts since that is the style I prefer, but there will be no obvious disruptions to the drawing.
+        The lining stage is defined as a refined lined pass of your character(s). The lines may remain sketchy in some areas because I prefer that more expressive style, but there will be no obvious disruptions to the drawing.
       </p>
       <p class="subbullet bodyText">
         The coloring stage is defined as a cleaned and colored rendering of your character(s).
