Updated Trello Link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			CURRENT OPENING:<br/>
 			<span class="smallTitle" style="color: var(--orange)">Fursona ID Cards! [3/6 left]</span>
 		</a>
-      <a class="smallTitle centerText bigLines underlineHover" href="https://trello.com/b/GwqS2tYQ">CLICK TO VISIT MY QUEUE ></a>
+      <a class="smallTitle centerText bigLines underlineHover" href="https://trello.com/b/GwqS2tYQ/Fades-Queue">CLICK TO VISIT MY QUEUE ></a>
       <img class="homeLogo" src="images/whimper.png">
 
       <nav class="homeDirectory">
