Updates headshot examples

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -45,10 +45,12 @@
               Also called a closeup. Shows the head and shoulder area.
             </p>
             <div class="dropperContent">
-              <img src="images/headshots/!!.png"/>
-              <img src="images/headshots/raine.gif"/>
-              <img src="images/headshots/steak1.png"/>
-              <img src="images/headshots/dog puppie dog baby child.gif"/>
+              <img src="images/examples/head 1.png"/>
+              <img src="images/examples/head 2.png"/>
+              <img src="images/examples/head 3.png"/>
+              <img src="images/examples/head 4.png"/>
+              <img src="images/examples/head 5.gif"/>
+              <img src="images/examples/head 6.png"/>
             </div>
           </div>
 
