--- a/pricesheet.html
+++ b/pricesheet.html
@@ -62,10 +62,10 @@
               Also called a medium closeup. Shows the elbow/chest area and above.
             </p>
             <div class="dropperContent">
-              <img src="images/busts/bust.png"/>
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
+              <img src="images/examples/bust 1.png"/>
+              <img src="images/examples/bust 2.png"/>
+              <img src="images/examples/bust 3.png"/>
+              <img src="images/examples/bust 4.png"/>
             </div>
           </div>
 
@@ -77,10 +77,10 @@
               Also called a mid shot. Shows about half the character; belly area and above. 
             </p>
             <div class="dropperContent">
-              <img src="images/halfbodies/willow2.png"/>
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
+              <img src="images/examples/half 1.png"/>
+              <img src="images/coming soon.png"/>
+              <img src="images/coming soon.png"/>
+              <img src="images/coming soon.png"/>
             </div>
           </div>
 
@@ -92,10 +92,10 @@
               Also called a medium full shot. Shows the thigh/knee area and above.
             </p>
             <div class="dropperContent">
-              <img src="images/thighups/willow1.png"/>
-              <img src="images/thighups/oh, to be.png"/>
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
+              <img src="images/examples/thigh 1.png"/>
+              <img src="images/examples/thigh 2.png"/>
+              <img src="images/coming soon.png"/>
+              <img src="images/coming soon.png"/>
             </div>
           </div>
 
@@ -107,10 +107,12 @@
               Also called a full shot. Shows your entire character in full and in focus.
             </p>
             <div class="dropperContent">
-              <img src="images/fullbodies/Gay furrie SPOTTED.png"/>
-              <img src="images/fullbodies/late night photography.png"/>
-              <img src="images/fullbodies/beach wip.png"/>
-              <img src="images/fullbodies/secret santa.gif"/>
+              <img src="images/examples/full 1.png"/>
+              <img src="images/examples/full 2.png"/>
+              <img src="images/examples/full 3.png"/>
+              <img src="images/examples/full 4.png"/>
+              <img src="images/examples/full 5.png"/>
+              <img src="images/examples/full 6.png"/>
             </div>
           </div>
 
@@ -128,10 +130,10 @@
               Per additional character. For example, if a fullbody costs $60, two fullbodies would be $60.00 + $39.00 (65% of $60) = $99.00. The two characters don't have to share the same framing!
             </p>
             <div class="dropperContent">
-              <img src="images/fullbodies/Gay furrie SPOTTED.png"/>
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
+              <img src="images/examples/add 1.png"/>
+              <img src="images/examples/add 2.png"/>
+              <img src="images/examples/add 3.png"/>
+              <img src="images/coming soon.png"/>
             </div>
           </div>
 
@@ -143,10 +145,12 @@
               Adds light and shadow to the drawing. Color/style/atmosphere suggestions are always welcome!
             </p>
             <div class="dropperContent">
-              <img src="images/fullbodies/Gay furrie SPOTTED.png"/>
-              <img src="images/fullbodies/late night photography.png"/>
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
+              <img src="images/examples/shade 1.png"/>
+              <img src="images/examples/shade 2.png"/>
+              <img src="images/examples/shade 3.png"/>
+              <img src="images/examples/shade 4.png"/>
+              <img src="images/examples/shade 5.png"/>
+              <img src="images/coming soon.png"/>
             </div>
           </div>
 
@@ -158,10 +162,12 @@
               First three props are free by default! This is the price for the fourth one and above. Props are any non-character item that is included in the piece or smaller closeups (AKA inserts) of a character.
             </p>
             <div class="dropperContent">
-              <img src="images/addons/unsheathe.gif"/>
-              <img src="images/headshots/raine.gif"/>
-              <img src="images/fullbodies/late night photography.png"/>
-              <img src="images/headshots/steak1.png"/>
+              <img src="images/examples/prop 1.png"/>
+              <img src="images/examples/prop 2.png"/>
+              <img src="images/examples/prop 3.png"/>
+              <img src="images/examples/prop 4.png"/>
+              <img src="images/examples/prop 5.png"/>
+              <img src="images/coming soon.png"/>
             </div>
           </div>
           
@@ -174,10 +180,10 @@
               Examples include simple repeating patterns, graphics, et cetera. Anything that doesn't resemble a concrete environment or location.
             </p>
             <div class="dropperContent">
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
+              <img src="images/examples/abstract 1.png"/>
+              <img src="images/examples/abstract 2.png"/>
+              <img src="images/examples/abstract 3.png"/>
+              <img src="images/coming soon.png"/>
             </div>
           </div>
 
@@ -189,10 +195,12 @@
               Puts your character into a simplified environment.
             </p>
             <div class="dropperContent">
-              <img src="images/thighups/willow1.png"/>
-              <img src="images/halfbodies/willow2.png"/>
-              <img src="images/fullbodies/late night photography.png"/>
-              <img src="images/placeholder.png"/>
+              <img src="images/examples/scene 1.png"/>
+              <img src="images/examples/scene 2.png"/>
+              <img src="images/examples/scene 3.png"/>
+              <img src="images/examples/scene 4.png"/>
+              <img src="images/examples/scene 5.png"/>
+              <img src="images/examples/scene 6.png"/>
             </div>
           </div>
 
@@ -204,10 +212,10 @@
               If the reference provided is a screenshot of a 3D model, the higher amount will be added, as 3D model references can be unclear in design and color. If you provide a color palette, this lowers.
             </p>
             <div class="dropperContent">
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
+              <img src="images/coming soon.png"/>
+              <img src="images/coming soon.png"/>
+              <img src="images/coming soon.png"/>
+              <img src="images/coming soon.png"/>
             </div>
           </div>
 
@@ -219,10 +227,10 @@
               Looking for an empty sketch/lineart instead? Take this amount away from the base price, per character!
             </p>
             <div class="dropperContent">
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
+              <img src="images/examples/colorless 1.png"/>
+              <img src="images/coming soon.png"/>
+              <img src="images/coming soon.png"/>
+              <img src="images/coming soon.png"/>
             </div>
           </div>
         </div>
