--- a/pricesheet.html
+++ b/pricesheet.html
@@ -165,7 +165,7 @@
               <img src="images/examples/prop 1.png"/>
               <img src="images/examples/prop 2.png"/>
               <img src="images/examples/prop 3.png"/>
-              <img src="images/examples/prop 4.png"/>
+              <img src="images/examples/prop 4.gif"/>
               <img src="images/examples/prop 5.png"/>
               <img src="images/coming soon.png"/>
             </div>
