--- a/pricesheet.html
+++ b/pricesheet.html
@@ -216,6 +216,8 @@
               <img src="images/coming soon.png"/>
               <img src="images/coming soon.png"/>
               <img src="images/coming soon.png"/>
+              <img src="images/coming soon.png"/>
+              <img src="images/coming soon.png"/>
             </div>
           </div>
 
