Change filename to something more appropriate

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <script src="dropdown.js"></script>
+    <script src="pricesheet.js"></script>
     <main>
       <a class="backButton" href="index.html"><i class="fa-solid fa-angle-left"></i></a>
       <div class="priceSheet">
