Header & description change

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -203,11 +203,12 @@
           </div>
 
           <!-- 3D REFERENCE SHEET -->
-          <div id="3d_reference" onclick="toggleDropper('3d_reference'); event.stopPropagation();" class="listing dropper">
-            <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>3D Reference Fee</h1>
+          <div id="unclear_reference_fee" onclick="toggleDropper('unclear_reference_fee'); event.stopPropagation();" class="listing dropper">
+            <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Unclear Reference Fee</h1>
             <h1 class="cost">+ $8 or $12</h1>
             <p class="description">
-              If the reference provided is a screenshot of a 3D model, the higher amount will be added, as 3D model references can be unclear in design and color. If you provide a color palette, this lowers.
+
+              If the reference provided is a fursuit photo, screenshot of a 3D model, traditional drawing, shaded reference sheet, or similar, the higher fee will be added, as these kinds of references can be unclear in design and color. If you provide a digital color palette, this lowers to the smaller fee.
             </p>
             <div class="dropperContent">
               <img src="images/coming soon.png"/>
