Added thighup example

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -92,7 +92,7 @@
             <div class="dropperContent">
               <img src="images/examples/thigh 1.png"/>
               <img src="images/examples/thigh 2.png"/>
-              <img src="images/coming soon.png"/>
+              <img src="images/examples/thigh 3.png"/>
               <img src="images/coming soon.png"/>
             </div>
           </div>
