Added shading example

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -148,7 +148,7 @@
               <img src="images/examples/shade 3.png"/>
               <img src="images/examples/shade 4.png"/>
               <img src="images/examples/shade 5.png"/>
-              <img src="images/coming soon.png"/>
+              <img src="images/examples/shade 6.png"/>
             </div>
           </div>
 
