--- a/pricesheet.html
+++ b/pricesheet.html
@@ -76,7 +76,7 @@
             </p>
             <div class="dropperContent">
               <img src="images/examples/half 1.png"/>
-              <img src="images/coming soon.png"/>
+              <img src="images/examples/half 2.png"/>
               <img src="images/coming soon.png"/>
               <img src="images/coming soon.png"/>
             </div>
