--- a/pricesheet.html
+++ b/pricesheet.html
@@ -64,6 +64,8 @@
               <img src="images/examples/bust 2.png"/>
               <img src="images/examples/bust 3.png"/>
               <img src="images/examples/bust 4.png"/>
+              <img src="images/examples/bust 5.png"/>
+              <img src="images/coming soon.png"/>
             </div>
           </div>
 
