--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
       <h1 class="largeTitle centerText bigLines">FURTHINGS COMMISSION HUB</h1>
 		<a style="margin-bottom: 8px; font-weight: bold" class="mediumTitle centerText underlineHover">
-			COMMISSIONS ARE CURRENTLY CLOSED<br/></a>
+			COMMISSIONS ARE CLOSED<br/></a>
 <!--		<a style="margin-bottom: 8px; font-weight: bold" class="mediumTitle centerText underlineHover" href="https://ko-fi.com/c/f8c7b2d012">
 			CURRENT OPENING:<br/>
 			<span class="smallTitle" style="color: var(--orange)">Fursona ID Cards! [1/6 left]</span>
