--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <main>
       <h1 class="largeTitle centerText bigLines">FURTHINGS COMMISSION HUB</h1>
-		<a style="margin-bottom: 8px; font-weight: bold" class="mediumTitle centerText underlineHover">
+		<a style="margin-bottom: 8px; font-weight: bold" class="mediumTitle centerText">
 			COMMISSIONS ARE OPEN!<br/></a>
 <!--		<a style="margin-bottom: 8px; font-weight: bold" class="mediumTitle centerText underlineHover" href="https://ko-fi.com/c/f8c7b2d012">
 			CURRENT OPENING:<br/>
